dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderTariff__c.object
<CustomObject>
    <description>Tariff configured under Order Line</description>
    <fields>
        <fullName>Actiontype__c</fullName>
        <description>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</description>
        <inlineHelpText>Action set by Product Configurator; based on this appropriate actions will be executed in external systems</inlineHelpText>
        <label>Actiontype</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BundleComponent__c</fullName>
        <description>Lookup to relation between Bundle and Component (used by Configurator to build tree structure)</description>
        <inlineHelpText>Lookup to relation between Bundle and Component (used by Configurator to build tree structure)</inlineHelpText>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Order Tariffs</relationshipLabel>
        <relationshipName>Order_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of the Tariff in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Tariff in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionPoint__c</fullName>
        <description>indicates connection point, that the Tariff was used for</description>
        <inlineHelpText>indicates connection point, that the Tariff was used for</inlineHelpText>
        <label>Connection Point</label>
        <picklist>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUTGOING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REDIRECT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates, whether the Tariff has already been created in Billing</description>
        <inlineHelpText>Indicates, whether the Tariff has already been created in Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderComponent__c</fullName>
        <description>Lookup to relation between Order and Component (used by Configurator to build tree structure)</description>
        <inlineHelpText>Lookup to relation between Order and Component (used by Configurator to build tree structure)</inlineHelpText>
        <label>Order Component</label>
        <referenceTo>OrderComponent__c</referenceTo>
        <relationshipLabel>Order Tariffs</relationshipLabel>
        <relationshipName>Order_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderLine__c</fullName>
        <description>Order Line, under which the Tariff was configured</description>
        <inlineHelpText>Order Line, under which the Tariff was configured</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Order Tariffs</relationshipLabel>
        <relationshipName>Order_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>ID assigned by Product Configurator used later to update Tariff with any changes</description>
        <externalId>true</externalId>
        <inlineHelpText>ID assigned by Product Configurator used later to update Tariff with any changes</inlineHelpText>
        <label>SFDC_ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Special_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this Tariff instance was copied from Special Offer.</description>
        <inlineHelpText>Indicates if this Tariff instance was copied from Special Offer.</inlineHelpText>
        <label>Special Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tariff__c</fullName>
        <description>Relation to Tariff Definition in Product Catalog</description>
        <inlineHelpText>Relation to Tariff Definition in Product Catalog</inlineHelpText>
        <label>Tariff</label>
        <referenceTo>Tariff__c</referenceTo>
        <relationshipLabel>Order Tariffs</relationshipLabel>
        <relationshipName>Order_Tariffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Tariff</label>
    <nameField>
        <label>Order Tariff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Tariffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>